--- a/Pruebas/Pruebas_2.0/ui/untitled.ui
+++ b/Pruebas/Pruebas_2.0/ui/untitled.ui
@@ -61,8 +61,8 @@
    <widget class="QPushButton" name="aceptar">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>210</y>
+      <x>400</x>
+      <y>280</y>
       <width>181</width>
       <height>31</height>
      </rect>
@@ -70,6 +70,21 @@
     <property name="text">
      <string>ACEPTAR</string>
     </property>
+   </widget>
+   <widget class="QWidget" name="horizontalLayoutWidget_3">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>190</y>
+      <width>511</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QComboBox" name="color"/>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
